# AquaWatcher

./: LICENSE  Makefile  README.md  after_covid.html  dev_requirements.txt  downloader.json  downloader.py  index.html  publisher.py  publisher_requirements.txt  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: downloader.yml  downloader.yml.disabled  publisher.yml  py39test.yml  tests.yml
data/2017/01/: 2017-01-07.csv  2017-01-08.csv  2017-01-09.csv  2017-01-10.csv  2017-01-11.csv  2017-01-12.csv  2017-01-13.csv  2017-01-14.csv  2017-01-15.csv  2017-01-16.csv  2017-01-17.csv  2017-01-18.csv  2017-01-19.csv  2017-01-20.csv  2017-01-21.csv  2017-01-22.csv  2017-01-23.csv  2017-01-24.csv  2017-01-25.csv  2017-01-26.csv  2017-01-27.csv  2017-01-28.csv  2017-01-29.csv  2017-01-30.csv  2017-01-31.csv
data/2017/02/: 2017-02-01.csv  2017-02-02.csv  2017-02-03.csv  2017-02-04.csv  2017-02-05.csv  2017-02-06.csv  2017-02-07.csv  2017-02-08.csv  2017-02-09.csv  2017-02-10.csv  2017-02-11.csv  2017-02-12.csv  2017-02-13.csv  2017-02-14.csv  2017-02-15.csv  2017-02-16.csv  2017-02-17.csv  2017-02-18.csv  2017-02-19.csv  2017-02-20.csv  2017-02-21.csv  2017-02-22.csv  2017-02-23.csv  2017-02-24.csv  2017-02-25.csv  2017-02-26.csv  2017-02-27.csv  2017-02-28.csv
data/2017/03/: 2017-03-01.csv  2017-03-02.csv  2017-03-03.csv  2017-03-04.csv  2017-03-05.csv  2017-03-06.csv  2017-03-07.csv  2017-03-08.csv  2017-03-09.csv  2017-03-10.csv  2017-03-11.csv  2017-03-12.csv  2017-03-13.csv  2017-03-14.csv  2017-03-15.csv  2017-03-16.csv  2017-03-17.csv  (+14 more)
templates/: index.html
(+2932 files in other folders)
